Fixed summary buttons alignment

--- a/src/components/search-area/search-area-summary.module.css
+++ b/src/components/search-area/search-area-summary.module.css
@@ -22,12 +22,12 @@
 .uasearchareasummary__buttons {
   display: flex;
   gap: var(--spacing-summary-element);
+  justify-content: flex-end;
 }
 
 @media screen and (width <= 800px) {
   .uasearchareasummary__buttons {
     display: flex;
-    justify-content: space-between;
     width: 100%;
   }
 }
